Dodanie narzedzia do porownywania pakietow

--- a/CodedNode/CodedNode.csproj
+++ b/CodedNode/CodedNode.csproj
@@ -47,7 +47,128 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="PackageComparator\PackagesComparator.exe.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="PackageComparator\Microsoft.Web.XmlTransform.dll" />
+    <Content Include="PackageComparator\Microsoft.Win32.Primitives.dll" />
+    <Content Include="PackageComparator\netstandard.dll" />
+    <Content Include="PackageComparator\Newtonsoft.Json.dll" />
+    <Content Include="PackageComparator\Newtonsoft.Json.xml" />
+    <Content Include="PackageComparator\NuGet.Common.dll" />
+    <Content Include="PackageComparator\NuGet.Common.xml" />
+    <Content Include="PackageComparator\NuGet.Configuration.dll" />
+    <Content Include="PackageComparator\NuGet.Configuration.xml" />
+    <Content Include="PackageComparator\NuGet.Core.dll" />
+    <Content Include="PackageComparator\NuGet.Frameworks.dll" />
+    <Content Include="PackageComparator\NuGet.Frameworks.xml" />
+    <Content Include="PackageComparator\NuGet.Packaging.dll" />
+    <Content Include="PackageComparator\NuGet.Packaging.xml" />
+    <Content Include="PackageComparator\NuGet.Versioning.dll" />
+    <Content Include="PackageComparator\NuGet.Versioning.xml" />
+    <Content Include="PackageComparator\PackagesComparator.exe" />
+    <Content Include="PackageComparator\PackagesComparator.pdb" />
+    <Content Include="PackageComparator\System.AppContext.dll" />
+    <Content Include="PackageComparator\System.Collections.Concurrent.dll" />
+    <Content Include="PackageComparator\System.Collections.dll" />
+    <Content Include="PackageComparator\System.Collections.NonGeneric.dll" />
+    <Content Include="PackageComparator\System.Collections.Specialized.dll" />
+    <Content Include="PackageComparator\System.ComponentModel.dll" />
+    <Content Include="PackageComparator\System.ComponentModel.EventBasedAsync.dll" />
+    <Content Include="PackageComparator\System.ComponentModel.Primitives.dll" />
+    <Content Include="PackageComparator\System.ComponentModel.TypeConverter.dll" />
+    <Content Include="PackageComparator\System.Console.dll" />
+    <Content Include="PackageComparator\System.Data.Common.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.Contracts.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.Debug.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.FileVersionInfo.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.Process.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.StackTrace.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.TextWriterTraceListener.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.Tools.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.TraceSource.dll" />
+    <Content Include="PackageComparator\System.Diagnostics.Tracing.dll" />
+    <Content Include="PackageComparator\System.Drawing.Primitives.dll" />
+    <Content Include="PackageComparator\System.Dynamic.Runtime.dll" />
+    <Content Include="PackageComparator\System.Globalization.Calendars.dll" />
+    <Content Include="PackageComparator\System.Globalization.dll" />
+    <Content Include="PackageComparator\System.Globalization.Extensions.dll" />
+    <Content Include="PackageComparator\System.IO.Compression.dll" />
+    <Content Include="PackageComparator\System.IO.Compression.ZipFile.dll" />
+    <Content Include="PackageComparator\System.IO.dll" />
+    <Content Include="PackageComparator\System.IO.FileSystem.dll" />
+    <Content Include="PackageComparator\System.IO.FileSystem.DriveInfo.dll" />
+    <Content Include="PackageComparator\System.IO.FileSystem.Primitives.dll" />
+    <Content Include="PackageComparator\System.IO.FileSystem.Watcher.dll" />
+    <Content Include="PackageComparator\System.IO.IsolatedStorage.dll" />
+    <Content Include="PackageComparator\System.IO.MemoryMappedFiles.dll" />
+    <Content Include="PackageComparator\System.IO.Pipes.dll" />
+    <Content Include="PackageComparator\System.IO.UnmanagedMemoryStream.dll" />
+    <Content Include="PackageComparator\System.Linq.dll" />
+    <Content Include="PackageComparator\System.Linq.Expressions.dll" />
+    <Content Include="PackageComparator\System.Linq.Parallel.dll" />
+    <Content Include="PackageComparator\System.Linq.Queryable.dll" />
+    <Content Include="PackageComparator\System.Net.Http.dll" />
+    <Content Include="PackageComparator\System.Net.NameResolution.dll" />
+    <Content Include="PackageComparator\System.Net.NetworkInformation.dll" />
+    <Content Include="PackageComparator\System.Net.Ping.dll" />
+    <Content Include="PackageComparator\System.Net.Primitives.dll" />
+    <Content Include="PackageComparator\System.Net.Requests.dll" />
+    <Content Include="PackageComparator\System.Net.Security.dll" />
+    <Content Include="PackageComparator\System.Net.Sockets.dll" />
+    <Content Include="PackageComparator\System.Net.WebHeaderCollection.dll" />
+    <Content Include="PackageComparator\System.Net.WebSockets.Client.dll" />
+    <Content Include="PackageComparator\System.Net.WebSockets.dll" />
+    <Content Include="PackageComparator\System.ObjectModel.dll" />
+    <Content Include="PackageComparator\System.Reflection.dll" />
+    <Content Include="PackageComparator\System.Reflection.Extensions.dll" />
+    <Content Include="PackageComparator\System.Reflection.Primitives.dll" />
+    <Content Include="PackageComparator\System.Resources.Reader.dll" />
+    <Content Include="PackageComparator\System.Resources.ResourceManager.dll" />
+    <Content Include="PackageComparator\System.Resources.Writer.dll" />
+    <Content Include="PackageComparator\System.Runtime.CompilerServices.VisualC.dll" />
+    <Content Include="PackageComparator\System.Runtime.dll" />
+    <Content Include="PackageComparator\System.Runtime.Extensions.dll" />
+    <Content Include="PackageComparator\System.Runtime.Handles.dll" />
+    <Content Include="PackageComparator\System.Runtime.InteropServices.dll" />
+    <Content Include="PackageComparator\System.Runtime.InteropServices.RuntimeInformation.dll" />
+    <Content Include="PackageComparator\System.Runtime.Numerics.dll" />
+    <Content Include="PackageComparator\System.Runtime.Serialization.Formatters.dll" />
+    <Content Include="PackageComparator\System.Runtime.Serialization.Json.dll" />
+    <Content Include="PackageComparator\System.Runtime.Serialization.Primitives.dll" />
+    <Content Include="PackageComparator\System.Runtime.Serialization.Xml.dll" />
+    <Content Include="PackageComparator\System.Security.Claims.dll" />
+    <Content Include="PackageComparator\System.Security.Cryptography.Algorithms.dll" />
+    <Content Include="PackageComparator\System.Security.Cryptography.Csp.dll" />
+    <Content Include="PackageComparator\System.Security.Cryptography.Encoding.dll" />
+    <Content Include="PackageComparator\System.Security.Cryptography.Primitives.dll" />
+    <Content Include="PackageComparator\System.Security.Cryptography.ProtectedData.dll" />
+    <Content Include="PackageComparator\System.Security.Cryptography.X509Certificates.dll" />
+    <Content Include="PackageComparator\System.Security.Principal.dll" />
+    <Content Include="PackageComparator\System.Security.SecureString.dll" />
+    <Content Include="PackageComparator\System.Text.Encoding.dll" />
+    <Content Include="PackageComparator\System.Text.Encoding.Extensions.dll" />
+    <Content Include="PackageComparator\System.Text.RegularExpressions.dll" />
+    <Content Include="PackageComparator\System.Threading.dll" />
+    <Content Include="PackageComparator\System.Threading.Overlapped.dll" />
+    <Content Include="PackageComparator\System.Threading.Tasks.dll" />
+    <Content Include="PackageComparator\System.Threading.Tasks.Parallel.dll" />
+    <Content Include="PackageComparator\System.Threading.Thread.dll" />
+    <Content Include="PackageComparator\System.Threading.ThreadPool.dll" />
+    <Content Include="PackageComparator\System.Threading.Timer.dll" />
+    <Content Include="PackageComparator\System.ValueTuple.dll" />
+    <Content Include="PackageComparator\System.Xml.ReaderWriter.dll" />
+    <Content Include="PackageComparator\System.Xml.XDocument.dll" />
+    <Content Include="PackageComparator\System.Xml.XmlDocument.dll" />
+    <Content Include="PackageComparator\System.Xml.XmlSerializer.dll" />
+    <Content Include="PackageComparator\System.Xml.XPath.dll" />
+    <Content Include="PackageComparator\System.Xml.XPath.XDocument.dll" />
+    <Content Include="PackagesInfo\2.8.0.726.txt" />
+    <Content Include="PackagesInfo\2.8.0.727.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>$(SolutionDir)CodedNode\PackageComparator\PackagesComparator.exe $(ProjectDir)</PreBuildEvent>
+  </PropertyGroup>
 </Project>
